C:/Program Files/Git/

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="contenido">
     <main class="contenedor">
       <div class="card-daniel card light-font">
-        <div class="card-header">
+        <div class="card-header comillas">
           <img src="images/image-daniel.jpg" alt="Daniel">
           <div class="texto-header">
             <h3>Daniel Clifford</h3>
